src/css/header.css
.header {
  position: sticky;
  z-index: 100;
  top: 0;
  width: 100%;
  height: 92px;
  display: flex;
  align-items: center;
  border-bottom: 1px solid #F0F0F0;
  background-color: #FFFFFF;
  padding: 0 40px
}

.header__logo {
  margin-right: 54px;
}

.header__header-menu {
  display: flex;
  align-items: center;
  font-weight: bold;
  font-size: 16px;
  line-height: 20px;
  color: #333333;
}

.header-menu__menu-item {
  list-style-type: none;
  margin-right: 28px;
  cursor: pointer;
  transition: color .15s ease-out;
}

.header-menu__menu-item:hover {
  opacity: 1;
  color: #cc0000;
  text-shadow: 0 0 4px #cc000022;
}

.header-menu__menu-item_active_true {
  opacity: 1;
}

.header-menu__menu-item_active_false {
  opacity: 0.6;
}

@media screen and (max-width: 576px) {
  .header {
    height: 64px;
    border-bottom: none;
    justify-content: space-between;
    margin: 0 20px;
  }

  .header__header-menu {
    display: none;
  }
}

